# uas-catpilot

./: .catlas_meta.json  .catlas_prj.xml  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  gui.py  main.c  makefile  system_schematic.xml  test_udp_gui.py  xml_inline.c  xml_inline.h
config/ctlst/: flow_adc.xml  flow_generators.xml  flow_nav_attitude_fusion.xml  flow_nav_attitude_prop.xml  flow_nav_baro.xml  flow_nav_compass.xml  flow_nav_imu_alignment.xml  flow_sens_adc.xml  flow_sens_imu.xml  flow_sensors.xml  flow_telemetry.xml  flow_test.xml  swsys.xml
config/cube/: flow_cont_angpos.xml  flow_housekeeping.xml  flow_nav_attitude_filter.xml  flow_nav_attitude_prop.xml  flow_nav_imu_alignment.xml  mvp_flow_control.xml  swsys.xml
config/quad/: flow_cont_angpos.xml  flow_cont_angrate.xml  flow_cont_odrive.xml  flow_cont_vel_pos.xml  flow_housekeeping.xml  flow_nav_attitude_filter.xml  flow_nav_attitude_fusion.xml  flow_nav_attitude_prop.xml  flow_nav_compass.xml  flow_nav_gnss_process.xml  flow_nav_imu_alignment.xml  flow_nav_vel_pos_fusion.xml  flow_nav_vel_pos_prop.xml  flow_rc.xml  flow_ublox_parsing.xml  ibr_ubx.xml  swsys.xml
f_specs/: .gitignore
f_specs/cube/io/gpio/: cube_io_gpio_exec.c  declaration.py
f_specs/cube/io/pwm/: cube_io_pwm_exec.c  declaration.py
f_specs/cube/io/rc/: cube_io_rc_exec.c  declaration.py
f_specs/cube/misc/cli_logger/: cube_misc_cli_logger_exec.c  declaration.py
f_specs/cube/sensors/icm20649/: cube_sensors_icm20649_exec.c  declaration.py
f_specs/cube/sensors/icm20948/: cube_sensors_icm20948_exec.c  declaration.py
